--- a/speakers/toobin.html
+++ b/speakers/toobin.html
@@ -9,9 +9,9 @@
 
 <body>
     <main>
-	    <h1>Jeffrey Toobin</h1>
-	    <h2>This page is under construction.</h2>	
-		<p><a href="C:\IS117Download\student_download\exercises\town_hall_1\index.html">Return to index page</a></p>
+	<h1>Jeffrey Toobin</h1>
+	<h2>This page is under construction.</h2>	
+	<p><a href="index.html">Return to index page</a></p>
     </main>
 </body>
 
