--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<img src="images/chua75.jpg">
 	</main>
 	<footer>
-		<p>&copy; 2018, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+		<p>&copy; 2021, Stephane Estime - San Joaquin Valley Town Hall, Fresno, CA 93755</p>
 	</footer>
 </body>
 </html>
